<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <Button
        android:id="@+id/addNoteButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Сохранить заметку" />

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Заголовок заметки"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/bodyEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Текст заметки"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/notesTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Пока заметок нет"
        android:textSize="18sp"
        android:paddingTop="20dp" />

    <Button
        android:id="@+id/deleteNoteButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Удалить заметку"
        android:layout_marginTop="16dp" />

</LinearLayout>